new updates and fixes
